--- a/nice-bust4.yaml
+++ b/nice-bust4.yaml
@@ -2,34 +2,34 @@
 #test on Wemos D1 mini
 
 substitutions:
-  device_name: "nice-robus-400-bust4-uart"
-  device_name_friendly: "Nice Robus 400"
-  api_password: !secret     wt32_eth01_api_password
-  ota_password: !secret     wt32_eth01_ota_password
-  mqtt_broker_address: !secret   mqtt_broker_address
-  led_gpio:                 GPIO2
-  DS18B20_pin:              GPIO4
-  light_relay_pin:          GPIO14
+  device_name: "nice_bus"
+  device_name_friendly: "Nice Bus"
+  api_password: !secret     nice_esp32_c3_api_password
+  ota_password: !secret     nice_esp32_c3_ota_password
+  #mqtt_broker_address: !secret   mqtt_broker_address
+  #led_gpio:                 GPIO2
+  #DS18B20_pin:              GPIO4
+  #light_relay_pin:          GPIO14
   #device_ip: 192.168.5.60
 
-# esphome:
-  # name: ${device_name}
-  # friendly_name: ${device_name_friendly}
+#esphome:
+ # name: ${device_name}
+ # friendly_name: ${device_name_friendly}
 
 
 esp32:
-  board: wt32-eth01
-  # board: esp32dev
+  #board: wt32-eth01
+  board: esp32-c3-dev
   framework:
     type: arduino
 
-ethernet:
-  type: LAN8720
-  mdc_pin: GPIO23
-  mdio_pin: GPIO18
-  clk_mode: GPIO0_IN
-  phy_addr: 1
-  power_pin: GPIO16
+#ethernet:
+  #type: LAN8720
+  #mdc_pin: GPIO23
+  #mdio_pin: GPIO18
+  #clk_mode: GPIO0_IN
+  #phy_addr: 1
+  #power_pin: GPIO16
   #Optional manual IP
   #manual_ip:
   #  static_ip: $device_ip
@@ -63,19 +63,19 @@ web_server:
 external_components:
   - source:
       type: git
-      url: https://github.com/karol27/Nice_BusT4_WT32-ETH01
+      url: https://github.com/ngem1/Nice_BusT4_ESP32-C3
     refresh: 0s
 
-#wifi:
-#  ssid: !secret wifi_ssid
-#  password: !secret wifi_password
+wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
 
-#  # Enable fallback hotspot (captive portal) in case wifi connection fails
-#  ap:
-#    ssid: "Nice Fallback Hotspot"
-#    password: "SKXZ6FPAdwIC"
+# Enable fallback hotspot (captive portal) in case wifi connection fails
+ap:
+  ssid: "${device_name}_fallback"
+  password: "fallbackpass"
 
-# captive_portal:
+captive_portal:
 
 # Enable Home Assistant API
 api:
@@ -471,6 +471,12 @@ cover:
 esphome:
   name: ${device_name}
   friendly_name: ${device_name_friendly}
+
+uart:
+  id: uart_bus
+  tx_pin: GPIO43
+  rx_pin: GPIO44
+  baud_rate: 9600
  
   # on_boot:
   #   priority: -10
