--- a/nice-bust4.yaml
+++ b/nice-bust4.yaml
@@ -2,7 +2,7 @@
 #test on Wemos D1 mini
 
 substitutions:
-  device_name: "nice_bus"
+  device_name: "nice-bus"
   device_name_friendly: "Nice Bus"
   api_password: !secret     nice_esp32_s3_api_password
   ota_password: !secret     nice_esp32_s3_ota_password
@@ -776,7 +776,7 @@ select:
             args: [ "(id(speed_open_select).index_of(x.c_str())).value_or(0)" ]
 
         - lambda: |-
-            if (x != other) {
+            if (x != "other") {
               int open_speed_variable;
               switch ((id(speed_open_select).index_of(x.c_str())).value_or(0)) {
                 case 0:
